--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,7 @@
 <div class="container-fluid form-group" style="width: max-content">
+  <div class="row justify-content-center" style="margin-top: 20%">
+    <img class="img-responsive" ngSrc="assets/logosinbg.png" height="175" width="181" alt="image">
+  </div>
   <div class="row justify-content-center" style="margin-top: 40%">
     <div class="col-4">
     </div>
