--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,1 +1,88 @@
 <p>principal works!</p>
+<br>
+<br>
+
+<div *ngIf="nores" class="row justify-content-center" >
+  <div class="col-md-auto">
+    <span style="color: crimson">
+      <br> No se han encontrado resultados
+    </span>
+  </div>
+</div>
+
+<div ngbAccordion [closeOthers]="true">
+  <div ngbAccordionItem *ngFor="let evento of listado" [collapsed]="true">
+    <h2 ngbAccordionHeader>
+      <button ngbAccordionButton>{{ evento.nombre }}</button>
+    </h2>
+    <div ngbAccordionCollapse>
+      <div ngbAccordionBody>
+        <ng-template>
+          <div class="row" style="margin-left: 10%">
+            <div class="col-md-5" style=";text-align: right" >
+              <label class="input-group-label">Puesto :<span style="color: crimson">{{evento.descripcion}}</span>
+              </label>
+            </div>
+            <div class="col-md-5">
+              <label class="input-group-label">Convocante:<span style="color: crimson">{{evento.organizador}}</span>
+              </label>
+            </div>
+          </div>
+
+          <div class="row" style="margin-left: 10%">
+            <div class="col-md-5" style="text-align: right">
+              <label class="input-group-label">Plazas :<span style="color: crimson">{{evento.aforo}}</span>
+              </label>
+            </div>
+            <div class="col-md-5">
+              <label class="input-group-label">Tipo:<span style="color: crimson">{{evento.categoria}}</span>
+              </label>
+            </div>
+          </div>
+
+          <div class="row" style="margin-left: 10%">
+            <div class="col-md-5" style="text-align: right">
+              <label class="input-group-label">Inicio plazo presentación :<span style="color: crimson">{{evento.fecha}}</span>
+              </label>
+            </div>
+            <div class="col-md-5">
+              <label class="input-group-label">Fin plazo presentación:<span style="color: crimson">{{evento.hora}}</span>
+              </label>
+            </div>
+          </div>
+        </ng-template>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row justify-content-center" style="margin-top: 2%">
+  <ngb-pagination *ngIf="listado_len > 0"[collectionSize]="listado_len" [(page)]="page" [boundaryLinks]="true" style="margin-left: auto;margin-right: auto">
+    <ng-template ngbPaginationPages let-page let-pages="pages">
+      <li class="ngb-custom-pages-item" *ngIf="pages.length > 0">
+        <div class="form-group d-flex flex-nowrap px-2">
+          <label
+            id="paginationInputLabel"
+            for="paginationInput"
+            class="col-form-label mr-2 ml-1"
+          >Page</label>
+          <input #i
+                 type="text"
+                 inputmode="numeric"
+                 pattern="[0-9]*"
+                 class="form-control custom-pages-input"
+                 id="paginationInput"
+                 [value]="page"
+                 (keyup.enter)="selectPage(i.value)"
+                 (blur)="selectPage(i.value)"
+                 (input)="formatInput($any($event).target)"
+                 aria-labelledby="paginationInputLabel paginationDescription"
+                 style="width: 2.5rem"
+          />
+          <span id="paginationDescription" class="col-form-label text-nowrap px-2">
+                  of {{pages.length}}</span>
+        </div>
+      </li>
+    </ng-template>
+  </ngb-pagination>
+</div>
