elementos barra navegación y listado

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+
+<nav style="background-color: ghostwhite;" class="navbar-nav nav-fill">
+  <div class="nav-item" style="float: right">
+
+    <button  class="btn btn-light" style="margin-right: 3px; float: right" id="logoutBut" (click)="toLogout()">Logout</button>
+    <button  class="btn btn-light" style="margin-right: 3px; float: right" id="accountBut" (click)="toAccount()">Mi Cuenta</button>
+    <button  class="btn btn-light" style="margin-right: 3px; float: right" id="createBut" (click)="toCreate()">Crear Evento</button>
+    <button  class="btn btn-light" style="margin-right: 3px; float: right" id="searchBut" (click)="toSearch()">Búsqueda</button>
+    <button  class="btn btn-light" style="margin-right: 3px; float: right" id="listBut" (click)="toPrincipal()">Home</button>
+  </div>
+</nav>
