--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -67,6 +67,7 @@
 </div>
 
 <div class="row justify-content-center" style="margin-top: 2%">
+  <div class="col-md-auto">
   <ngb-pagination *ngIf="listado_len > 0"[collectionSize]="listado_len" [(page)]="page" [boundaryLinks]="true" style="margin-left: auto;margin-right: auto">
     <ng-template ngbPaginationPages let-page let-pages="pages">
       <li class="ngb-custom-pages-item" *ngIf="pages.length > 0">
@@ -95,4 +96,5 @@
       </li>
     </ng-template>
   </ngb-pagination>
+  </div>
 </div>
