--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -64,6 +64,11 @@
                     </label>
                   </div>
                 </div>
+                <div class="row" style="margin-left: 10%;margin-top: 2%">
+                  <div class="col-md-10" style=";text-align: center" >
+                    <button  class="btn btn-secondary" style="background-color: green" id="editBut" (click)="Edit(evento)">Editar</button>
+                  </div>
+                </div>
               </ng-template>
             </div>
           </div>
@@ -72,7 +77,7 @@
 
       <div class="row justify-content-center" style="margin-top: 2%">
         <div class="col-md-auto">
-          <ngb-pagination *ngIf="listadoMine_len > 0"[collectionSize]="listadoMine_len" [(page)]="pageMine" [boundaryLinks]="true" style="margin-left: auto;margin-right: auto">
+          <ngb-pagination *ngIf="listadoMine_len > 0" [collectionSize]="listadoMine_len" [(page)]="pageMine" [boundaryLinks]="true" style="margin-left: auto;margin-right: auto">
             <ng-template ngbPaginationPages let-page let-pages="pages">
               <li class="ngb-custom-pages-item" *ngIf="pages.length > 0">
                 <div class="form-group d-flex flex-nowrap px-2">
@@ -176,7 +181,7 @@
 
       <div class="row justify-content-center" style="margin-top: 2%">
         <div class="col-md-auto">
-          <ngb-pagination *ngIf="listadoAp_len > 0"[collectionSize]="listadoAp_len" [(page)]="pageAp" [boundaryLinks]="true" style="margin-left: auto;margin-right: auto">
+          <ngb-pagination *ngIf="listadoAp_len > 0" [collectionSize]="listadoAp_len" [(page)]="pageAp" [boundaryLinks]="true" style="margin-left: auto;margin-right: auto">
             <ng-template ngbPaginationPages let-page let-pages="pages">
               <li class="ngb-custom-pages-item" *ngIf="pages.length > 0">
                 <div class="form-group d-flex flex-nowrap px-2">
