--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="row" style="margin-left: 10%;margin-top: 2%">
                   <div class="col-md-10" style=";text-align: center" >
-                    <button  class="btn btn-secondary" style="background-color: green" id="editBut" (click)="Edit(evento)">Editar</button>
+                    <button  class="btn btn-secondary" style="background-color: green" id="editBut" (click)="edit(evento,content)">Editar</button>
                   </div>
                 </div>
               </ng-template>
@@ -215,5 +215,80 @@
   </ng-container>
 </nav>
 
-<div [ngbNavOutlet]="nav" class="mt-2"></div>
 
+
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">¿Actualizar contraseña?</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+    <div class="container-fluid form-group" style="width: max-content">
+      <div class="row justify-content-center" style="margin-top: 10%">
+        <div class="col-md-auto">
+          <label class="input-group-label">Nombre
+            <br>
+            <input class="form-control" type="text" placeholder="Nombre" name="nombre" [(ngModel)]="nombre" ></label>
+        </div>
+        <div class="col-md-auto">
+          <label class="input-group-label">Categoría
+            <br>
+            <input class="form-control" type="text" placeholder="Categoría" name="categoria" [(ngModel)]="categoria" ></label>
+        </div>
+      </div>
+
+      <div class="row justify-content-center" style="margin-top: 7%">
+        <div class="col-md-auto">
+          <label class="input-group-label">Descripción
+            <br>
+            <input class="form-control" type="text" placeholder="Descripción" name="descripcion" [(ngModel)]="descripcion"></label>
+        </div>
+      </div>
+
+      <div class="row justify-content-center" style="margin-top: 7%">
+        <div class="col-md-auto">
+          <label class="input-group-label">Aforo
+            <br>
+            <input class="form-control" type="number" placeholder="Aforo" name="aforo" [(ngModel)]="aforo"></label>
+        </div>
+      </div>
+
+      <div class="row justify-content-center" style="margin-top: 7%">
+        <div class="col-md-auto">
+          <label class="input-group-label">Fecha
+            <br><br>
+            <input style="margin-top: 6%"
+                   class="form-control"
+                   placeholder="yyyy-mm-dd"
+                   name="dp"
+                   [(ngModel)]="fecha"
+                   ngbDatepicker
+                   #d="ngbDatepicker"
+            />
+            <button class="btn btn-secondary bi bi-calendar3" style="justify-self: center" (click)="d.toggle()" type="button">Seleccionar Fecha</button>
+          </label>
+        </div>
+
+
+        <div class="col-md-auto">
+          <label class="input-group-label">Hora
+            <br>
+            <ngb-timepicker [(ngModel)]="hora"></ngb-timepicker>
+          </label>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+  <div class="modal-footer">
+
+    <button type="button" class="btn btn-primary">Enviar</button>
+    <button type="button" class="btn btn-secondary" (click)="modal.close('Save click')">Salir</button>
+  </div>
+</ng-template>
+
+
+
+<div [ngbNavOutlet]="nav" class="mt-2"></div>
