--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -229,12 +229,18 @@
         <div class="col-md-auto">
           <label class="input-group-label">Nombre
             <br>
-            <input class="form-control" type="text" placeholder="Nombre" name="nombre" [(ngModel)]="nombre" ></label>
+            <input class="form-control" type="text" placeholder="Nombre" name="nombre" [(ngModel)]="nombre" disabled></label>
+            <span *ngIf="showReqErrorName" style="color: crimson">
+                 <br> Campo no puede ser vacío
+            </span>
         </div>
         <div class="col-md-auto">
           <label class="input-group-label">Categoría
             <br>
             <input class="form-control" type="text" placeholder="Categoría" name="categoria" [(ngModel)]="categoria" ></label>
+            <span *ngIf="showReqErrorCat" style="color: crimson">
+                   <br> Campo no puede ser vacío
+            </span>
         </div>
       </div>
 
@@ -243,6 +249,9 @@
           <label class="input-group-label">Descripción
             <br>
             <input class="form-control" type="text" placeholder="Descripción" name="descripcion" [(ngModel)]="descripcion"></label>
+            <span *ngIf="showReqErrorDes" style="color: crimson">
+                 <br> Campo no puede ser vacío
+            </span>
         </div>
       </div>
 
@@ -251,6 +260,9 @@
           <label class="input-group-label">Aforo
             <br>
             <input class="form-control" type="number" placeholder="Aforo" name="aforo" [(ngModel)]="aforo"></label>
+            <span *ngIf="showReqErrorAforo" style="color: crimson">
+                 <br> Campo no puede ser vacío
+            </span>
         </div>
       </div>
 
@@ -268,6 +280,9 @@
             />
             <button class="btn btn-secondary bi bi-calendar3" style="justify-self: center" (click)="d.toggle()" type="button">Seleccionar Fecha</button>
           </label>
+          <span *ngIf="showReqErrorFecha" style="color: crimson">
+                 <br> Campo no puede ser vacío
+          </span>
         </div>
 
 
@@ -276,15 +291,16 @@
             <br>
             <ngb-timepicker [(ngModel)]="hora"></ngb-timepicker>
           </label>
+          <span *ngIf="showReqErrorHora" style="color: crimson">
+                 <br> Campo no puede ser vacío
+            </span>
         </div>
       </div>
-
-
     </div>
   </div>
   <div class="modal-footer">
 
-    <button type="button" class="btn btn-primary">Enviar</button>
+    <button type="button" class="btn btn-primary" (click)="updateEvento()">Guardar</button>
     <button type="button" class="btn btn-secondary" (click)="modal.close('Save click')">Salir</button>
   </div>
 </ng-template>
