--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -6,13 +6,7 @@
       <br>
       <br>
 
-      <div *ngIf="noresMine" class="row justify-content-center" >
-        <div class="col-md-auto">
-    <span style="color: crimson">
-      <br> No se han encontrado resultados
-    </span>
-        </div>
-      </div>
+
 
       <div class="row justify-content-center" >
         <div class="col-md-auto">
@@ -22,6 +16,14 @@
         </div>
       </div>
       <br>
+
+      <div *ngIf="noresMine" class="row justify-content-center">
+        <div class="col-md-auto">
+          <span style="color: crimson">
+            <br> No se han encontrado resultados
+          </span>
+        </div>
+      </div>
 
       <div ngbAccordion [animation]= "true" [closeOthers]="true">
         <div ngbAccordionItem *ngFor="let evento of listadoMine" [collapsed]="true">
@@ -115,14 +117,6 @@
       <br>
       <br>
 
-      <div *ngIf="noresAp" class="row justify-content-center" >
-        <div class="col-md-auto">
-    <span style="color: crimson">
-      <br> No se han encontrado resultados
-    </span>
-        </div>
-      </div>
-
       <div class="row justify-content-center" >
         <div class="col-md-auto">
           <span style="color: dodgerblue">
@@ -131,6 +125,14 @@
         </div>
       </div>
       <br>
+
+      <div *ngIf="noresAp" class="row justify-content-center" >
+        <div class="col-md-auto">
+          <span style="color: crimson">
+            <br> No se han encontrado resultados
+          </span>
+        </div>
+      </div>
 
       <div ngbAccordion [animation]= "true" [closeOthers]="true">
         <div ngbAccordionItem *ngFor="let evento of listadoAp" [collapsed]="true">
@@ -220,7 +222,7 @@
 
 <ng-template #content let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">¿Actualizar contraseña?</h4>
+    <h4 class="modal-title" id="modal-basic-title">Editar evento</h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
@@ -299,12 +301,28 @@
     </div>
   </div>
   <div class="modal-footer">
-
+    <button type="button" class="btn btn-danger float-start" style="float: left" (click)="open(contentBor)">Borrar</button>
     <button type="button" class="btn btn-primary" (click)="updateEvento()">Guardar</button>
     <button type="button" class="btn btn-secondary" (click)="modal.close('Save click')">Salir</button>
   </div>
 </ng-template>
 
+
+<ng-template #contentBor let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modalBor-basic-title">Borrar evento</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+    <div class="mb-3">
+      <p style="text-align: center;margin-top: 7%">Confirmar borrado de evento</p>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-danger float-start" style="float: left" (click)="borrarEvento()">Borrar</button>
+    <button type="button" class="btn btn-secondary" (click)="modal.close('Save click')">Salir</button>
+  </div>
+</ng-template>
 
 
 <div [ngbNavOutlet]="nav" class="mt-2"></div>
